--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ jspm_packages
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 .idea/
+*.iml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
