--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "hapi": "^13.3.0",
     "jade": "~1.11.0",
+    "joi": "^8.0.5",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
