--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.0",
+    "boom": "^3.1.2",
     "cookie-parser": "~1.4.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
