--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "joi": "^8.0.5",
     "morgan": "~1.7.0",
+    "mysql": "^2.10.2",
     "serve-favicon": "~2.3.0"
   }
 }
