--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^8.0.5",
     "morgan": "~1.7.0",
     "mysql": "^2.10.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
